--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>Curso Gratis</h1>
         </header>
         <article>
-            <h2>artigo 01</h2>
-            <p>texto do artigo 01</p>
+            <h2>Curso de html</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita repellat praesentium assumenda iste? Quis corporis, at facilis eius sunt obcaecati esse, fuga, repellat itaque natus voluptas. Adipisci autem a placeat.</p>
         </article>
         <article>
-            <h2>artigo 02</h2>
-            <p>texto do artigo 02</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt perspiciatis iure at iste rem recusandae? Ipsum culpa minus quam nulla? Fugiat est unde provident at dolore accusantium dolor sint!</p>
         </article>
     </main>
 </body>
